--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <div class="row">
       <div class="col-sm-4">
         <h3>Click!</h3>
-        <!--Clicks Per Second: <span id="cps">0</span><br>-->
+        Clicks Per Second: <span id="cps">0</span><br>
         Likes: <span id="count">0</span><br>
         <button id="poop" class="twa twa-5x twa-poop" onclick="clickEmoji(1)"></button><br>
         </div>
